data/derived/comb/progs/unify/prog6638.ml.out
Characters 70-71:
  in if c'= false then wwhile f b' 
                              ^
Error: This expression has type 'a -> 'b * bool
       but an expression was expected of type ('a -> 'b * bool) * 'a
